<resources>
    <string name="app_name" translatable="false">PostBee</string>

    <string name="ui_users">Utilisateurs</string>
    <string name="ui_moderation">Modération</string>
    <string name="ui_postToValidate">Posts à valider</string>
    <string name="ui_comments">Commentaires</string>
    <string name="ui_target">Public ciblé</string>
    <string name="ui_loading">Chargement...</string>

    <string name="ui_warning">Attention !</string>
    <string name="ui_delete">Supprimer</string>
    <string name="ui_cancel">Annuler</string>
    <string name="ui_addPicture">Ajouter une image</string>
    <string name="ui_addVideo">Ajouter une vidéo</string>
    <string name="ui_sendPost">Publier le post</string>

    <string name="ui_deleteAccountWarning">Êtes-vous sûr de vouloir supprimer votre compte ?\nVos posts seront concervés mais anonymisés.</string>
    <string name="ui_deleteUserWarning">Êtes-vous sûr de vouloir supprimer l\'utilisateur</string>
    <string name="ui_addModoConfirmation">Êtes-vous sûr de vouloir ajouter cet utilisateur comme modérateur ?</string>

    <string name="ui_welcome">Bienvenue à PostBee !</string>
    <string name="ui_resetPassword">Réinitialiser le mot de passe</string>
    <string name="ui_resetPasswordTitle">Réinitialisation du mot de passe</string>
    <string name="ui_name">Nom</string>
    <string name="ui_firstname">Prénom</string>
    <string name="ui_email">Email</string>
    <string name="ui_password">Mot de passe</string>
    <string name="ui_confirmPassword">Confirmer le mot de passe</string>
    <string name="ui_status">Statut</string>
    <string name="ui_forgotPassword">Mot de passe oublié</string>
    <string name="ui_connect">Se connecter</string>
    <string name="ui_register">S\'inscrire</string>
    <string name="ui_registration">Inscription</string>
    <string name="ui_settings">Paramètres</string>

    <string name="hint_title">Titre</string>
    <string name="hint_content">Ecrivez votre post ici...</string>

    <string name="status_student">Etudiant</string>
    <string name="status_teacher">Enseignant</string>
    <string name="status_other">Autre personnel</string>


    <string name="placeholder_title" translatable="false">Titre un petit peu plus long</string>
    <string name="placeholder_content" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam a dapibus urna. Suspendisse potenti. Quisque congue eleifend enim vitae varius. Donec elit sapien, sodales bibendum varius ac, congue ac est. Nam feugiat finibus purus at lacinia. Phasellus efficitur risus id accumsan vestibulum. Maecenas pellentesque gravida sapien in consectetur. Nunc justo purus, molestie vitae erat ac, blandit cursus enim. Maecenas nec tristique ipsum. Aenean eget mi auctor, accumsan magna at, hendrerit enim. Praesent nec quam augue. Nulla nec porta orci, nec aliquam mauris. Integer in turpis id nibh mattis semper at non augue. Pellentesque nec diam sit amet quam lobortis efficitur. Pellentesque gravida neque odio, non tincidunt massa maximus in.

        Ut eget accumsan odio. Maecenas condimentum sit amet tortor id egestas. Maecenas ac condimentum felis. Nullam non magna pulvinar, scelerisque ipsum sed, pellentesque ante. Suspendisse potenti. Donec ultrices tincidunt cursus. Pellentesque enim ante, dapibus sagittis quam facilisis, placerat ultrices metus. Maecenas id tincidunt metus. Phasellus semper sapien vitae mauris ultricies aliquet. In in condimentum elit, eu tempor nisi.

        Nunc eget massa diam. Nulla eu pharetra ex. Ut a pellentesque odio. Cras commodo nulla diam, sit amet dictum sapien varius quis. Vivamus venenatis elit sed orci hendrerit eleifend. Nam eu pulvinar dolor. Praesent a orci sodales, mollis orci vel, maximus quam. Praesent ornare semper massa, eget volutpat dui rhoncus et. Etiam vitae molestie velit. Sed lobortis augue a magna suscipit, quis eleifend eros pellentesque. Sed cursus tristique justo auctor suscipit. Quisque a porttitor lacus. Etiam maximus tellus justo, eu accumsan nulla molestie vel. Morbi ut erat nec neque vestibulum imperdiet. Duis a viverra orci.

        Etiam porttitor elit lectus, at feugiat est efficitur at. Integer ac tortor massa. Etiam ut semper nulla. Aliquam eu nunc sed massa faucibus consectetur. Suspendisse fermentum blandit ante sed interdum. Fusce porta fermentum pellentesque. Nunc eleifend sed sem vel commodo. In hac habitasse platea dictumst. Suspendisse risus justo, finibus non est eu, venenatis accumsan felis.

        Proin nec viverra massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin sit amet hendrerit urna, vel ornare orci. Vestibulum at aliquam odio. Praesent sapien dolor, finibus ut mollis non, dapibus pretium augue. Etiam sed neque vitae nunc egestas lobortis. Cras a tempus est, a dapibus nulla. Cras et varius nulla. Fusce auctor mi sed odio sollicitudin, mollis semper sapien pellentesque. Aliquam sed placerat est. Quisque tempus metus augue, vel volutpat elit vulputate quis. Maecenas ornare nulla est, non convallis felis molestie quis. Ut at consequat eros, vitae hendrerit libero. Nulla eu quam arcu. Praesent eu venenatis massa. Suspendisse sit amet lectus sed nunc condimentum suscipit viverra a orci.
    </string>
    <string name="placeholder_username" translatable="false">Alain Génieur</string>
    <string name="placeholder_date" translatable="false">01/01/2000</string>
    <string name="placeholder_comment" translatable="false">Sample comment</string>
    <string name="placeholder_email" translatable="false">my.cool@email.com</string>
    <string name="placeholder_role" translatable="false">The role</string>
    <string name="placeholder_setting" translatable="false">Sample setting</string>
    <string name="ui_profile">Profil</string>
    <string name="ui_addPost">Ajouter un post</string>
    <string name="ui_myPosts">Mes posts</string>
    <string name="ui_oldPassword">Ancien mot de passe</string>
    <string name="ui_newPassword">Nouveau mot de passe</string>
    <string name="ui_changePassword">Changer de mot de passe</string>
    <string name="setting_changeTheme">Changer de thème</string>
    <string name="setting_logout">Se déconnecter</string>
    <string name="setting_deleteAccount">Supprimer le compte</string>
    <string name="toast_notSamePassword">Les deux champs ne correspondent pas !</string>
    <string name="ui_yes">Oui</string>
    <string name="ui_no">Non</string>
    <string name="ui_deleteCommentWarning">Êtes-vous sûr de vouloir supprimer ce commentaire ?</string>
    <string name="ui_writeComment">Ecrire un commentaire</string>
    <string name="ui_postComment">Publier un commentaire</string>
    <string name="ui_changePfp">Changer d\'image de profil</string>
    <string name="ui_addMedia">Ajouter un média</string>
    <string name="ui_about">À propos</string>
</resources>