<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controller.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout style="@style/LayoutDefault">

        <ImageView
            android:id="@+id/login_imageview_logo"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:src="@drawable/logo" />

        <TextView style="@style/TextAppearance.Material3.TitleLarge"
            android:id="@+id/login_textview_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/ui_welcome" />

        <EditText style="@style/DefaultTextField"
            android:id="@+id/login_edittext_email"
            android:inputType="textEmailAddress"
            android:hint="@string/ui_email"
            android:layout_marginTop="@dimen/gap_part" />

        <EditText style="@style/DefaultTextField"
            android:id="@+id/login_edittext_password"
            android:inputType="textPassword"
            android:hint="@string/ui_password" />

        <Button style="@style/DefaultListItemButton"
            android:id="@+id/login_button_forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openSecondActivity"
            android:minHeight="0dp"
            android:paddingStart="16dp"
            android:textColor="@color/ensisa_yellow"
            android:text="@string/ui_forgotPassword" />

        <Button style="@style/ButtonAction"
            android:id="@+id/login_button_login"
            app:cornerRadius="12dp"
            android:text="@string/ui_connect"
            android:layout_marginTop="@dimen/gap_partBig" />

        <Button style="@style/ButtonActionBorder"
            android:id="@+id/login_button_register"
            android:text="@string/ui_register"
            android:layout_marginTop="@dimen/gap_item"
            android:background="@drawable/border_button"
            app:backgroundTint="@null"
            />
    </LinearLayout>
</ScrollView>