<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_itempost_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        >
        <TextView
            android:id="@+id/viewpost_textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_title"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/viewpost_textview_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:gravity="start"
                android:text="@string/placeholder_username"/>
            <TextView
                android:id="@+id/viewpost_textview_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:gravity="end"
                android:text="@string/placeholder_date"/>
        </LinearLayout>

        <TextView
            android:id="@+id/viewpost_textview_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ui_comments"
            android:textSize="36sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/viewpost_textview_commentuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_username"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/viewpost_textview_commenttext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_comment"
            android:textSize="20sp"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>