<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="vertical"
    android:background="@color/bg_blue"
    app:cornerRadius="40dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/itempost_textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/placeholder_title"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/itempost_textview_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_username"
            android:textSize="16sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/itempost_textview_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/placeholder_date"
            android:textSize="16sp"
            android:textStyle="italic"/>
    </LinearLayout>

</LinearLayout>