<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/border_list_item"
    android:padding="12dp"
    android:layout_marginTop="@dimen/gap_item"
    android:layout_marginHorizontal="@dimen/gap_part" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView style="@style/TextAppearance.Material3.ActionBar.Title"
            android:id="@+id/itemcomment_textview_username"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/placeholder_username" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView style="@style/TextAppearance.Material3.BodyMedium"
                android:id="@+id/itemcomment_textview_role"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/placeholder_role" />

            <TextView style="@style/TextAppearance.Material3.BodyMedium"
                android:id="@+id/itemcomment_textview_date"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/placeholder_date" />
        </LinearLayout>

        <TextView style="@style/TextAppearance.Material3.BodyLarge"
            android:id="@+id/itemcomment_textview_content"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_comment"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <ImageButton style="@style/ButtonActionBorder"
            android:id="@+id/itemcomment_button_edit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/round_edit_24"
            app:tint="@color/ensisa_yellow"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/gap_item"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/itemcomment_button_remove"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/round_delete_24"
            app:tint="@color/ensisa_yellow"
            android:background="@android:color/transparent"/>
    </LinearLayout>
</LinearLayout>