<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_itempost_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout style="@style/LayoutDefault">
        <EditText style="@style/TextAppearance.Material3.HeadlineLarge"
            android:id="@+id/editpost_edittext_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:textStyle="bold"/>

        <TextView style="@style/TextAppearance.Material3.ActionBar.Subtitle"
            android:id="@+id/editpost_textview_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_username"/>

        <EditText style="@style/TextAppearance.Material3.BodyLarge"
            android:id="@+id/editpost_edittext_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_content"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:id="@+id/image_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/doc_image_1_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/doc_image_1"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/default_profile_image" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/doc_image_2_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/doc_image_2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"

            </LinearLayout>

            <LinearLayout
                android:id="@+id/doc_image_3_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/doc_image_3"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal" />


            </LinearLayout>

        </LinearLayout>


        <Button style="@style/ButtonAction"
            android:id="@+id/edit_post_button_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:text="Upload a photo" />

        <Button style="@style/ButtonAction"
            android:id="@+id/editpost_button_submit"
            app:cornerRadius="12dp"
            android:layout_marginTop="@dimen/gap_part"
            android:text="@string/ui_sendPost" />
    </LinearLayout>
</ScrollView>