<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="horizontal"
    android:background="@drawable/border_list_item"
    android:padding="12dp"
    android:layout_marginTop="@dimen/gap_item"
    android:layout_marginHorizontal="@dimen/gap_part" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView style="@style/TextAppearance.Material3.ActionBar.Title"
            android:id="@+id/itempost_textview_title"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/placeholder_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <TextView style="@style/TextAppearance.Material3.ActionBar.Subtitle"
                android:id="@+id/itempost_textview_author"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_username"/>

            <TextView style="@style/TextAppearance.Material3.ActionBar.Subtitle"
                android:id="@+id/itempost_textview_date"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/placeholder_date"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <Button style="@style/ButtonActionBorder"
            android:id="@+id/itempostvalidation_button_accept"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="0dp"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/gap_item"
            android:background="@drawable/border_button"
            app:backgroundTint="@null"
            android:text="✓" />

        <Button
            android:id="@+id/itempostvalidation_button_deny"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="0dp"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/gap_item"
            android:background="@drawable/border_button"
            app:backgroundTint="@null"
            android:textColor="@color/ensisa_yellow"
            android:text="✕" />
    </LinearLayout>
</LinearLayout>