<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/border_list_item"
    android:padding="12dp"
    android:layout_marginTop="@dimen/gap_item"
    android:layout_marginHorizontal="@dimen/gap_part">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView style="@style/TextAppearance.Material3.ActionBar.Title"
            android:id="@+id/itemuser_textview_fullname"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/placeholder_username" />

        <TextView style="@style/TextAppearance.Material3.ActionBar.Subtitle"
            android:id="@+id/itemuser_textview_email"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_email"/>

        <TextView style="@style/TextAppearance.Material3.ActionBar.Subtitle"
            android:id="@+id/itemuser_textview_role"
            android:textStyle="italic"
            android:gravity="end"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_role"/>

        <TextView style="@style/TextAppearance.Material3.ActionBar.Subtitle"
            android:id="@+id/itemuser_textview_staff"
            android:textStyle="italic"
            android:gravity="end"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{itemUser.is_staff ? "Modérateur" : "Utilisateur"}' />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageButton style="@style/ButtonActionBorder"
            android:id="@+id/itemuser_button_addModo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/border_button"
            app:backgroundTint="@null"
            android:src="@drawable/round_person_add_alt_1_24"
            android:foregroundTint="@color/ensisa_yellow"
            app:tint="@color/ensisa_yellow" />
        <ImageButton style="@style/ButtonActionBorder"
            android:id="@+id/itemuser_button_remove"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/gap_item"
            android:background="@drawable/border_button"
            app:backgroundTint="@null"
            android:src="@drawable/round_delete_24"
            android:foregroundTint="@color/ensisa_yellow"
            app:tint="@color/ensisa_yellow" />
    </LinearLayout>
</LinearLayout>
